--- a/index.html
+++ b/index.html
@@ -5,12 +5,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mikołaj jest gejem</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
+        body {
+            font-family: 'Lato', Arial, sans-serif;
+            margin: 0;
+        }
+
+        .navbar {
+            height: 50px;
+            width: 100%;
+            border-bottom: .5px solid rgb(173, 66, 84);
+        }
+
+        .heading {
+            text-align: center;
+            margin: 0;
+            line-height: 50px;
+            color: rgb(173, 66, 84);
+        }
+
+        .content-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            height: 100vh;
+            width: 100vw;
+            background-color: rgb(255, 216, 222);
+            overflow: hidden;
+        }
+
+        .content {
+            width: 750px;
+            height: 50%;
+            text-align: center;
+            padding: 25px;
+            color: rgb(173, 66, 84);
+        }
+
+        .agree-button {
+            outline: 0;
+            border: 0;
+            background-color: rgb(255, 155, 171);
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            cursor: pointer;
+            color: white;
+            margin: 15px;
+            font-size: 24px;
+            user-select: none;
+            padding: 5px;
+        }
+
+        .agree-button:hover {
+            background-color: rgb(255, 158, 182);
+        }
+
+        .agree-button:active {
+            background-color: rgb(255, 182, 200);
+        }
+
+        #counter {
+            color: rgb(173, 66, 84);
+        }
+
+        footer {
+            width: 100%;
+            height: 50px;
+            border-top: 1px solid rgb(173, 66, 84);
+            color: rgb(173, 66, 84);
+            text-align: center;
+            margin: 0;
+            line-height: 50px;
+            font-size: 22px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Mikołaj jest gejem. Press "Zgadzam się" to agree</h1>
-    <h2 id="counter">Zgadzasz się 0 razy!</h2>
-    <button onclick="agree()">Zgadzam się</button>
+    <div class="content-wrapper">
+        <nav class="navbar">
+            <h1 class="heading">Mikołaj jest gejem</h1>
+        </nav>
+        <div class="content">
+            <h2>Press "Zgadzam się" to agree</h2>
+            <button class="agree-button" onclick="agree()">Zgadzam się</button>
+            <h2 id="counter">Zgadzasz się 0 razy!</h2>
+        </div>
+        <footer>
+            Autor: <i>randomowy_pesel</i>
+        </footer>
+    </div>
+
     <script>
         let count = 0;
 
